// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<StatsDisplay /> sections > Model Usage Table Updates > should apply color to cache efficiency percentage 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Session API                                                                                     │
│  Total Requests:             1                                                                   │
│  Total Errors:               0                                                                   │
│  Avg Latency:                100ms                                                               │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              0s (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
│  Model Usage                 Reqs   Input Tokens   Cache Reads  Output Tokens                    │
│  ────────────────────────────────────────────────────────────────────────────                    │
│  gemini-2.5-pro                 1            500           500            100                    │
│    Latency: 100ms avg / 100ms total                                                              │
│                                                                                                  │
│  Savings Highlight: 500 (50.0%) of input tokens were served from the cache, reducing costs.      │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> sections > Model Usage Table Updates > should display separate Input Tokens and Cache Reads columns 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Session API                                                                                     │
│  Total Requests:             5                                                                   │
│  Total Errors:               0                                                                   │
│  Avg Latency:                200ms                                                               │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              0s (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
│  Model Usage                 Reqs   Input Tokens   Cache Reads  Output Tokens                    │
│  ────────────────────────────────────────────────────────────────────────────                    │
│  gemini-2.5-pro                 5            600           400            500                    │
│    Latency: 200ms avg / 1.0s total                                                               │
│                                                                                                  │
│  Savings Highlight: 400 (40.0%) of input tokens were served from the cache, reducing costs.      │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> sections > Quota Display > does not render quota section when quotaLines are not provided 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              0s (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> sections > Quota Display > handles empty quotaLines gracefully 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              0s (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> sections > Quota Display > renders quota information when quotaLines are provided 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Session API                                                                                     │
│  Total Requests:             1                                                                   │
│  Total Errors:               0                                                                   │
│  Avg Latency:                100ms                                                               │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              0s (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
│  Model Usage                 Reqs   Input Tokens   Cache Reads  Output Tokens                    │
│  ────────────────────────────────────────────────────────────────────────────                    │
│  gemini-2.5-pro                 1             50            50            100                    │
│    Latency: 100ms avg / 100ms total                                                              │
│                                                                                                  │
│  Savings Highlight: 50 (50.0%) of input tokens were served from the cache, reducing costs.       │
│                                                                                                  │
│  Quota Information                                                                               │
│  ## Anthropic Quota Information                                                                  │
│                                                                                                  │
│  **Daily Usage**                                                                                 │
│  Used: 1000 / 10000 tokens (10.0%)                                                               │
│  Remaining: 9000 tokens                                                                          │
│  Resets: 2026-02-15 00:00:00 UTC                                                                 │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> sections > Title Rendering > renders the custom title when a title prop is provided 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Agent powering down. Goodbye!                                                                   │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              0s (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> sections > Title Rendering > renders the default title when no title prop is provided 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              0s (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> sections > performance metrics display > hides throughput, TTFT, and output rate when values are non-finite 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              0s (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> sections > performance metrics display > hides throughput, TTFT, and output rate when values are unavailable 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              0s (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> sections > performance metrics display > shows throughput when TPM is present even if TTFT/output rate are unavailable 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              0s (0.0%)                                                           │
│    » Throughput (TPM):       250.00 TPM (session weighted)                                       │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> sections > performance metrics display > shows throughput, TTFT, and output rate in performance section when available 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Session API                                                                                     │
│  Total Requests:             2                                                                   │
│  Total Errors:               0                                                                   │
│  Avg Latency:                1.3s                                                                │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 1 ( OK 1 ERR 0 )                                                    │
│    » Total Duration:         250ms                                                               │
│  Success Rate:               100.0%                                                              │
│  User Agreement:             100.0% (1 reviewed)                                                 │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              0s (0.0%)                                                           │
│    » Throughput (TPM):       1.23k TPM (session weighted)                                        │
│    » TTFT (last):            187ms                                                               │
│    » Output Gen Rate:        15.50 tok/s (session weighted)                                      │
│    » Input Rate (eff):       3200.00 tok/s (ΣP/ΣTTFT)                                            │
│                                                                                                  │
│                                                                                                  │
│  Model Usage                 Reqs   Input Tokens   Cache Reads  Output Tokens                    │
│  ────────────────────────────────────────────────────────────────────────────                    │
│  gemini-2.5-pro                 2            600           300            400                    │
│    Latency: 1.3s avg / 2.5s total                                                                │
│                                                                                                  │
│  Savings Highlight: 300 (33.3%) of input tokens were served from the cache, reducing costs.      │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
